WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.0-dev, 2012-12-02


Version 0.4.0 (under dev!)
--------------------------

* core: execute command with higher priority when many commands with same name
  are found with different priorities
* core: add color support in options
  weechat.look.prefix_{action|error|join|network|quit} (task #9555)
* core: fix display of combining chars (bug #37775)
* core: display default values for changed config options in output of /set
* core: stop cmake if gcrypt lib is not found (bug #37671)
* core: add incomplete mouse events "event-down" and "event-drag" (task #11840)
* core: add command /eval, use expression in conditions for bars
* core: add option "-quit" for command /upgrade (save session and quit without
  restarting WeeChat, for delayed restoration)
* core: fix display of zoomed/merged buffer (with number >= 2) after switching
  to it (bug #37593)
* core: fix display problem when option weechat.look.prefix_same_nick is set
  (problem with nick displayed in first line of screen) (bug #37556)
* core: fix wrapping of words with wide chars (the break was made before the
  correct position)
* api: use hashtable "options" for command arguments in function
  hook_process_hashtable (optional, default is a split of string with command)
* api: do not call shell to execute command in hook_process (fix security
  problem when a plugin/script gives untrusted command) (bug #37764)
* api: add new function "string_eval_expression"
* api: connect with IPv6 by default in hook_connect (with fallback to IPv4),
  shuffle list of hosts for a same address, add argument "retry" for
  hook_connect, move "sock" from hook_connect arguments to callback of
  hook_connect (task #11205)
* alias: give higher priority to aliases (2000) so that they take precedence
  over an existing command
* aspell: add bar items "aspell_dict" (dictionary used on current buffer) and