@@ -7,6 +7,8 @@ v0.4.0-dev, 2012-12-02
 Version 0.4.0 (under dev!)
 --------------------------
 
+* core: use high priority (50000) for commands /command and /input so that an
+  alias will not take precedence over these commands (bug #36353)
 * core: execute command with higher priority when many commands with same name
   are found with different priorities
 * core: add color support in options
